--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     /* Altura / vh - altura */
     width: 100vw;
     /*  vw - largura */
+    background-size: cover;
     background-image: url("https://source.unsplash.com/1600x900/?landscape");
 }
 
@@ -85,5 +86,28 @@ h2 {
     margin-top: 30px;
 }
 
-/*link para mim dps..
- https://youtu.be/qxzqEuAOYZ4?si=HL1HhuQAMI9jOji6 */
+@media screen and (max-width:900px) {
+    
+    input{
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 24px;
+    font-size: 17px;
+    background-color: #7c7c7c2b;
+    color: #ffffff;
+    width: calc(100% - 75px);
+}
+
+.caixa-maior{
+    opacity: 0.8;
+    padding: 20px;
+    border-radius: 25px;
+    background-color: #000000;
+    width: 331px;
+}
+
+h2{
+    font-size: 23px;
+}
+}
