--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body{
 
 .caixa-maior {
     background-color: #000000;/*  Troca cor de fundo  */
-    width: 95%; /*  Largura  */
-    max-width: 420px; /*  Largura  Maxima */
+    width: 23vw;  /* Largura  -> max-width: 420px;  Largura  Maxima */
     opacity: 0.8;/* transparencia do item */
     padding: 20px;
     border-radius: 25px;
@@ -31,16 +30,17 @@ input {
     outline: none;/* borda quando seleciona o elemento */
     padding: 10px;/* espaçamento interno */
     border-radius: 24px;/* arredonda as bordas */
-    font-size: 20px;
+    font-size: 13px;
     background-color: #7c7c7c2b;
     color: #ffffff;
-    width: calc( 100% - 100px);
+    width: calc( 100% - 73px);
 }
 
 button {
     border: none;
     outline: none;
     padding: 10px;
+    height: 40px;
     border-radius: 50px;
     background-color: #7c7c7c2b;
     float: right;
@@ -52,48 +52,55 @@ button:hover {
 }
 
 .caixa-media {
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 .caixa-menor {
     display: flex;
-    margin-top: 30px;
+    margin-top: 5px;
     align-items: center;
 }
-
+ 
 .lupa {
-    height: 20px;
-}
+    height: 20px; /* tamanho da img-lupa */
+} 
+
 
 h2 {
     color: white;
-    font-size: 28px; /* tamanho do texto */
+    font-size: 16px; /* tamanho do texto */
 }
 
 .temp {
     color: #ffffff;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .descricao {
+    font-size: 13px;
     color: #ffffff;
-    margin-left: 20px;
+    margin-left: 2px;
     text-transform: capitalize; /* Deixa a primeira letra maiuscula*/
 }
 
-.umidade {
-    color: #ffffff;
-    margin-top: 30px;
+.icone{
+    height: 40px;
 }
 
-@media screen and (max-width:900px) {
+.umidade {
+    font-size: 13px;
+    color: #ffffff;
+    
+}
+
+@media screen and (max-width:1100px) {
     
     input{
     border: none;
     outline: none;
     padding: 10px;
     border-radius: 24px;
-    font-size: 17px;
+    font-size: 14px;
     background-color: #7c7c7c2b;
     color: #ffffff;
     width: calc(100% - 75px);
@@ -104,10 +111,10 @@ h2 {
     padding: 20px;
     border-radius: 25px;
     background-color: #000000;
-    width: 331px;
+    width: 300px;
 }
 
 h2{
-    font-size: 23px;
+    font-size: 20px;
 }
 }
